discussion/kv_engine/155626/155626_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46844: Use PIMPL for CachingReadHandle

Change-Id: I87fd56f20e039df861b12a421612a02e6731809e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-11 14:41:01.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 15:47:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36785/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36785/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9804/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.cc:37:20: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
CachingReadHandle::~CachingReadHandle() {
                   ^                    ~
                                        = default;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9804/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8398/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/320/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31433/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11379/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11528/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11805/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10459/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-14 12:34:15.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
